--- a/Project.toml
+++ b/Project.toml
@@ -5,10 +5,15 @@ version = "0.1.0"
 
 [deps]
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
-ModelingToolkit = "5.14"
 julia = "1.5"
+ModelingToolkit = "7.1.3"
+OrdinaryDiffEq = "6.0.3"
+Plots = "1.25.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
