--- a/Project.toml
+++ b/Project.toml
@@ -1,21 +1,19 @@
 name = "NeuronBuilder"
 uuid = "bdec0aff-bc35-4528-862d-7dacab2b11a0"
-authors = ["Dhruva2 <dhruvaraman@hotmail.com> and contributors"]
+authors = ["Dhruva2 <dhruvaraman@hotmail.com> and AndreaRamirezH <andreairh03@gmail.com>"]
 version = "0.1.0"
+
+[compat]
+ModelingToolkit = "8.5.4"
+Julia = "1.7"
 
 [deps]
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
-OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
-[compat]
-julia = "1.5"
-ModelingToolkit = "7.1.3"
-OrdinaryDiffEq = "6.0.3"
-Plots = "1.25.3"
 
 [extras]
+CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
