--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.2.3"
 
 [deps]
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
