--- a/Project.toml
+++ b/Project.toml
@@ -1,17 +1,15 @@
-name = "NeuronBuilder"
-uuid = "bdec0aff-bc35-4528-862d-7dacab2b11a0"
-authors = ["Dhruva2 <dhruvaraman@hotmail.com> and AndreaRamirezH <andreairh03@gmail.com>"]
-version = "0.2.4"
+name = "NBuilder"
+uuid = "5ea760ef-0180-430a-bcc7-7f6e86ca06f4"
+authors = ["Dhruva V. Raman", "University of Sussex"]
+version = "1.0.0-DEV"
 
 [deps]
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 
 [compat]
-ModelingToolkit = "8.5.4"
-julia = "1.7"
+julia = "1"
 
 [extras]
-CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
