changed name from test repository NBuilder to NeuronBuilder.

--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,13 @@
-name = "NBuilder"
+name = "NeuronBuilder"
 uuid = "5ea760ef-0180-430a-bcc7-7f6e86ca06f4"
 authors = ["Dhruva V. Raman", "University of Sussex"]
-version = "1.0.0-DEV"
+version = "0.2.5-DEV"
 
 [deps]
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 
 [compat]
-julia = "1"
+julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
